[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "porthole-sandbox"
version = "0.1.0"
description = "Python-native local sandbox runtime with HTTP inspection and Cloudflare tunnel exposure"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["sandbox", "proxy", "inspector", "cloudflare", "tunnel", "http"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "aiohttp>=3.9.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/draju1980/porthole"
Repository = "https://github.com/draju1980/porthole"
Issues = "https://github.com/draju1980/porthole/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/porthole"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
